Sun Nov 16 01:13:58 PST 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimConvWindow.cpp:
	  - Stop the new message notification when the tab is selected.

Sun Nov 16 01:01:29 PST 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimConvWindow.cpp:
	* src/QGaimConvWindow.h:
	* src/QGaimNotify.cpp:
	* src/QGaimPrefsDialog.cpp:
	* src/QGaimPrefsDialog.h:
	  - Added message notification optionally using the buzzer and LED.

Sat Nov 15 23:56:54 PST 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimConvWindow.cpp:
	* src/QGaimConvWindow.h:
	* src/QGaimMainWindow.cpp:
	* src/QGaimNotify.cpp:
	* src/QGaimNotify.h:
	  - Added the base functionality for message notification.

Sat Nov 15 22:16:48 PST 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimPrefsDialog.cpp:
	  - Fixed a crash when closing the preferences dialog.

Sat Nov 15 22:11:27 PST 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimPrefsDialog.cpp:
	  - Fixed a crash when building the Buddy List prefs page.

Sat Nov 15 22:06:12 PST 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBuddyList.cpp:
	  - Replaced some glib calls with their Qt equivalents.

Fri Nov 14 10:54:01 PST 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBuddyList.cpp:
	  - Shrink the second column when we're in the big list, since we
	    won't be using it.

Fri Nov 14 10:53:27 PST 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimPrefsDialog.cpp:
	* src/QGaimPrefsDialog.h:
	  - Added a "Show warnings" preference to the buddy list.

Fri Nov 14 10:52:30 PST 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimPrefsDialog.cpp:
	  - Hide the other preference pages for now, since they're currently
	    empty.

Tue Nov 11 23:32:48 PST 2003  Christian Hammond <chipx86@gnupdate.org>

	* mkipk.sh:
	  - Updated to work with the new directory structure in data/images.

Tue Nov 11 23:32:05 PST 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBuddyList.cpp: